logs/learnbysubs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cchardet'...
Listing './lib/python3.5/site-packages/cchardet-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/charade'...
Listing './lib/python3.5/site-packages/charade-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/learnbysubs'...
Compiling './lib/python3.5/site-packages/learnbysubs/__init__.py'...
***   File "./lib/python3.5/site-packages/learnbysubs/__init__.py", line 14
    print help_text
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/learnbysubs/texts.py'...
***   File "./lib/python3.5/site-packages/learnbysubs/texts.py", line 36
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 878-879: malformed \N character escape

Listing './lib/python3.5/site-packages/learnbysubs-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysrt'...
Listing './lib/python3.5/site-packages/pysrt-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
